Fix for BUG#10107: Memory leak in view over subquery: In mysql_make_view when joining subquery lists, take into account that both lists can have length > 1 (see also fix for BUG#8490) (note to bk trigger: this commit is about BUG#10107)